--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>Maasser - Suivi de votre dîme</title>
+    <title>Maasser Time</title>
     <meta name="description" content="Application de suivi du Maasser (10% des revenus) dans la tradition juive. Gérez vos revenus, calculez votre dîme et suivez vos dons facilement." />
-    <meta name="author" content="Lovable" />
     <meta name="theme-color" content="#1f9d7f" />
     <!-- PWA Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
