--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Maasser Time</title>
     <meta name="description" content="Application de suivi du Maasser (10% des revenus) dans la tradition juive. Gérez vos revenus, calculez votre dîme et suivez vos dons facilement." />
     <meta name="theme-color" content="#1f9d7f" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <!-- PWA Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
