--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <meta name="apple-mobile-web-app-title" content="Maasser" />
     
     <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="src/public/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="src/public/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="src/public/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="src/public/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="src/public/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="src/public/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="src/public/apple-touch-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="src/public/apple-touch-icon-180x180.png" />
+    <link rel="apple-touch-icon" href="./src/public/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="./src/public/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="./src/src/public/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./src/src/public/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="./src/src/public/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="./src/src/public/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="./src/src/public/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="./src/src/public/apple-touch-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/src/public/apple-touch-icon-180x180.png" />
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
